--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 		<version.java>1.8</version.java>
 		<version.javaee>7.0</version.javaee>
 		<version.commons-lang>3.4</version.commons-lang>
+		<version.cloning>1.9.1</version.cloning>
+		<version.guava>19.0</version.guava>
 	</properties>
 
 
@@ -31,6 +33,18 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 			<version>${version.commons-lang}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>uk.com.robust-it</groupId>
+			<artifactId>cloning</artifactId>
+			<version>${version.cloning}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>${version.guava}</version>
 		</dependency>
 
 	</dependencies>
