--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,14 @@
 
 
 	<properties>
+		<nomPackaging>WINEO_MIDDLEWARE</nomPackaging>
+	
+		<version.cloning>1.9.1</version.cloning>
+		<version.commons-lang>3.4</version.commons-lang>
+		<version.guava>19.0</version.guava>
+		<version.hibernate>5.1.0.Final</version.hibernate>
 		<version.java>1.8</version.java>
 		<version.javaee>7.0</version.javaee>
-		<version.commons-lang>3.4</version.commons-lang>
-		<version.cloning>1.9.1</version.cloning>
-		<version.guava>19.0</version.guava>
 	</properties>
 
 
@@ -72,6 +75,13 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- Hibernate -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-entitymanager</artifactId>
+			<version>${version.hibernate}</version>
+		</dependency>
+
 	</dependencies>
 
 
@@ -87,6 +97,37 @@
 					<target>${version.java}</target>
 					<encoding>UTF-8</encoding>
 				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-ejb-plugin</artifactId>
+				<version>2.5.1</version>
+				<configuration>
+					<jarName>${nomPackaging}</jarName>
+					<ejbVersion>3.1</ejbVersion>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.wildfly.plugins</groupId>
+				<artifactId>wildfly-maven-plugin</artifactId>
+				<version>1.1.0.Alpha5</version>
+				<executions>
+					<execution>
+						<phase>install</phase>
+						<goals>
+							<goal>deploy</goal>
+						</goals>
+						<configuration>
+							<filename>${nomPackaging}.jar</filename>
+							
+							<hostname>192.168.99.100</hostname>
+							<username>admin</username>
+							<password>admin</password>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 
 		</plugins>
