--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
 	<properties>
 		<nomPackaging>WINEO_MIDDLEWARE</nomPackaging>
-	
+
 		<version.cloning>1.9.1</version.cloning>
 		<version.commons-lang>3.4</version.commons-lang>
 		<version.guava>19.0</version.guava>
@@ -82,6 +82,13 @@
 			<version>${version.hibernate}</version>
 		</dependency>
 
+		<!-- Driver PostgreSQL -->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>9.4.1208</version>
+		</dependency>
+
 	</dependencies>
 
 
@@ -121,10 +128,7 @@
 						</goals>
 						<configuration>
 							<filename>${nomPackaging}.jar</filename>
-							
-							<hostname>192.168.99.100</hostname>
-							<username>admin</username>
-							<password>admin</password>
+
 						</configuration>
 					</execution>
 				</executions>
