--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<artifactId>middleware</artifactId>
 	<version>0.1-SNAPSHOT</version>
 
-	<packaging>ejb</packaging>
+	<packaging>war</packaging>
 
 	<name>Middleware</name>
 
@@ -80,6 +80,12 @@
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
 			<version>${version.hibernate}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>dom4j</groupId>
+					<artifactId>dom4j</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<!-- Driver PostgreSQL -->
@@ -87,6 +93,13 @@
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<version>9.4.1208</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>dom4j</groupId>
+			<artifactId>dom4j</artifactId>
+			<version>1.6.1</version>
+			<scope>provided</scope>
 		</dependency>
 
 	</dependencies>
@@ -107,16 +120,6 @@
 			</plugin>
 
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-ejb-plugin</artifactId>
-				<version>2.5.1</version>
-				<configuration>
-					<jarName>${nomPackaging}</jarName>
-					<ejbVersion>3.1</ejbVersion>
-				</configuration>
-			</plugin>
-
-			<plugin>
 				<groupId>org.wildfly.plugins</groupId>
 				<artifactId>wildfly-maven-plugin</artifactId>
 				<version>1.1.0.Alpha5</version>
@@ -127,7 +130,6 @@
 							<goal>deploy</goal>
 						</goals>
 						<configuration>
-							<filename>${nomPackaging}.jar</filename>
 							<hostname>localhost</hostname>
 							<port>9990</port>
 							<username>admin</username>
